syntax = "proto3";
option java_multiple_files = true;
package com.trzewik.activemq.interfaces.grpc.information;

message InformationRequest {
    string id = 1;
}

message InformationResponse {
    string message = 1;
}

service InformationController {
    rpc getInformation(InformationRequest) returns (InformationResponse);
}
